--- a/petlife/index.html
+++ b/petlife/index.html
@@ -11,6 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div>
+        <p>Navegue entre os arquivos das aulas:</p> <br>
+        <a href="/index.html">Primeira Página</a>
+        <a href="/petlife/index.html" target="_blank">PETLIFE</a> <br> 
+        <a href="/artigo/index.html" target="_blank">Artigo</a> <br> 
+        <a href="/quebradelinha/" target="_blank">quebra de linha</a> <br> 
+        <a href="/imagens/index.html" target="_blank">Imagens</a> <br> 
+    </div>
     <header>
         <a href="index.html">
             <img src="./img/logo-white.svg" alt="PetLife">
