--- a/HTML/petlife/index.html
+++ b/HTML/petlife/index.html
@@ -96,6 +96,11 @@
                     <img src="img/arrow-down.svg" alt="">
                     <p class="paragrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique quisquam magnam, tenetur, natus animi vero officiis deleniti pariatur repellendus facere nam nesciunt possimus provident dolorem cupiditate error. Blanditiis, odit doloribus.</p>
                 </div>
+                <div class="duvida">
+                    <h3>A clinica oferece serviços de banho e tosa</h3>
+                    <img src="img/arrow-down.svg" alt="">
+                    <p class="paragrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique quisquam magnam, tenetur, natus animi vero officiis deleniti pariatur repellendus facere nam nesciunt possimus provident dolorem cupiditate error. Blanditiis, odit doloribus.</p>
+                </div>
             </div>
         </section>
     </main>
@@ -126,5 +131,8 @@
         Desenvolvido por <a href="https://github.com/Mathsiqueir" target="blank">@Mathsiqueir</a>
         na trilha Start na programação 🤘 da OneBitCode
     </div>
+    <script src="index.js">
+       
+    </script>
 </body>
 </html>
