--- a/JS/2.extra/entendendo-HOF/index.html
+++ b/JS/2.extra/entendendo-HOF/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>High-Order Functions</h1>
-    <script src="hof.js"></script>
+    <script src="HOFextra.js"></script>
 </body>
 </html>
