--- a/JS/aula39-objetosGlobais/index.html
+++ b/JS/aula39-objetosGlobais/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>High-Order Functions</title>
+    <title>Objetos Globais</title>
 </head>
 <body>
-    <h1>High-Order Functions</h1>
-    <script src="hof.js"></script>
+    <h1>Objetos Globais</h1>
+    <script src="index.js"></script>
 </body>
 </html>
