--- a/random/exercicios-01/funcaoArray/index.html
+++ b/random/exercicios-01/funcaoArray/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>High-Order Functions</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>High-Order Functions</h1>
-    <script src="hof.js"></script>
+    <script src="foreach.js"></script>
 </body>
 </html>
