--- a/random/funções-de-ARRAY/FILTER/filter.html
+++ b/random/funções-de-ARRAY/FILTER/filter.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>High-Order Functions</title>
+    <title>Filter</title>
 </head>
-<body>
-    <h1>High-Order Functions</h1>
-    <script src="hof.js"></script>
+<body style="background-color: #2c2c2c;">
+    <script src="filter.js"></script>
 </body>
 </html>
