--- a/random/funções-de-ARRAY/reduce/reduce.html
+++ b/random/funções-de-ARRAY/reduce/reduce.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>High-Order Functions</title>
+    <title>reduce</title>
+    <style>
+        body{background-color: #2c2c2c;}
+    </style>
 </head>
 <body>
-    <h1>High-Order Functions</h1>
-    <script src="hof1.js"></script>
+    <script src="reduce.js"></script>
 </body>
 </html>
