--- a/JS/aula38-high-Order_functions_Array/array-hof.html
+++ b/JS/aula38-high-Order_functions_Array/array-hof.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <h1>High-Order Functions e Arrays</h1>
-    <script src="array-hof.js"></script>
+    <script src="array-hof-copy.js"></script>
 </body>
 </html>
