--- a/JS/Estrutura de Dados e Funções/exercicio-10/index.html
+++ b/JS/Estrutura de Dados e Funções/exercicio-10/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercicio 10</title>
     <style>
+        body{
+            background-color: #1c1c1c;
+            color: whitesmoke;
+        }
         p {
             margin: 0 auto;
             width: 90vw;
+            
         }
     </style>
 </head>
@@ -21,15 +26,17 @@
         Ter um um menu onde é possível escolher entre as diferentes funcionalidades do sistema Listar vagas
         disponíveisCriar um nova vagaVisualizar uma vagaInscrever um candidato em uma vaga
     </p>
-    <ul>
-        <li>Excluir uma vaga Sair</li>
-        <li>Listar vagas disponíveis</li>
-        <li>Criar um nova vaga</li>
-        <li>Visualizar uma vaga</li>
-        <li>Inscrever um candidato em uma vaga</li>
-        <li>Excluir uma vaga</li>
-        <li>Sair</li>
-    </ul>
+    <p>
+        <ul>
+            <li>Excluir uma vaga Sair</li>
+            <li>Listar vagas disponíveis</li>
+            <li>Criar um nova vaga</li>
+            <li>Visualizar uma vaga</li>
+            <li>Inscrever um candidato em uma vaga</li>
+            <li>Excluir uma vaga</li>
+            <li>Sair</li>
+        </ul>
+    </p>
     <p>
     A opção de listar as vagas deve mostrar o índice, o nome e a quantidade de candidatos inscritos de todas as vagas.
     A opção de criar uma nova vaga deve pedir um nome para a vaga, uma descrição e uma data limite, e também deve pedir
