--- a/JS/JS Moderno/5-rest_params/index.html
+++ b/JS/JS Moderno/5-rest_params/index.html
@@ -41,7 +41,7 @@
         //     return num +=accum
         //     },0)
         // }
-        console.log(sum(1,1))
+4        console.log(sum(1,1))
         
         console.log(sum1([2,3,4]))
     </script>
