--- a/JS/POO/associacao/index.html
+++ b/JS/POO/associacao/index.html
@@ -8,10 +8,18 @@
 </head>
 <body>
 <pre>
-    Uma associação é um relacionamento entre classes que permite que uma instância de uma classe faã a outra realizar uma associação
+    Uma associação é um relacionamento entre classes que permite que uma instância de uma classe faça a outra realizar uma associação
 
-    é cmo dizer para aplicação que um objeto de um tip está conectado, ou depende, de um objeto de outro tipo
+    é como dizer para aplicação que um objeto de um tip está conectado, ou depende, de um objeto de outro tipo
+    Exemplo
 
+    Monte uma classe, 
+    a exporte para outro arquivo, 
+    no novo arquivo a importe.
+    para fazer com que a classe principal deste arquivo receba a outra classe
+    use a sua constante atribua a ela seus parametros
+
+    
 </pre>
 </body>
 </html>
