--- a/JS/exercicios-extras/oProgramador/calcular-IMC/index.html
+++ b/JS/exercicios-extras/oProgramador/calcular-IMC/index.html
@@ -22,7 +22,12 @@
                 <label for="weight">weight</label>
                 <input type="text" id="weight">
             </div>
-            <div><button id="calc">calculate</button></div>
+            <div>
+                <button id="calc">calculate</button>
+            </div>
+            <div>
+                <span id="result"></span>
+            </div>
         </form>
     </section>
     <script src="imc.js"></script>
