--- a/CSS/ex-flex-01/index.html
+++ b/CSS/ex-flex-01/index.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <img src="../image/iconrock-red.svg" alt="">
-            <img src="../image/logo-onebitcode.svg" alt="">
-            <div>
-                <ul>
+    <header >
+        <nav class="menu-container">
+            <img src="../image/iconrock-red.svg" alt="" width="50px"
+            height="50px">
+            <img src="../image/logo-onebitcode.svg" alt="" width="150px"
+            height="50px">
+                <ul class="opt-container">
                     <li>Inicio</li>
-                    <li></li>
+                    <li>FAQ</li>
+                    <li>SUPORTE</li>
                 </ul>
-            </div>
         </nav>
     </header>
 </body>
