--- a/CSS/projeto-grid/index.html
+++ b/CSS/projeto-grid/index.html
@@ -1,82 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto flexbox&grid</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <title>Projeto Flexbox&Grid</title>
 </head>
 
 <body>
     <div class="container">
-        <header>
-            <img src="logo-onebitcode.svg" alt="logo-onebitcode">
-            <nav>
-                <ul class="menu">
-                    <li>login</li>
-                    <li>Registro</li>
-                    <li>FAQ</li>
-                </ul>
-            </nav>
-        </header>
-        <div class="title">
-            <h2>BEM VINDO A ONEBITSPORTS!</h2>
-            <p>Aqui eh onde voce encontra os itens mais novos e modernos do seu esporte preferido</p>
-        </div>
-        <main class="mainContent">
-            <div class="item">
-                <img src="paisagem-650.jpg" alt="">
-                <h3>Esporte</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus.</p>
+        <header class="header">
+            <div class="header">
+                <img src="logo-onebitcode.svg" alt="logoOnebitcode" class="logoNavBar">
+                <div class="headerBtnGroup">
+                    <button class="navBtn">Login</button>
+                    <button class="navBtn">Registro</button>
+                    <button class="navBtn">FAQ</button>
+                </div>
             </div>
-            <div class="item">
-                <img src="paisagem-650.jpg" alt="">
-                <h3>Esporte</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus.</p>
-                </dv>
-                <div class="item">
-                    <img src="paisagem-650.jpg" alt="">
-                    <h3>Esporte</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus.</p>
+        </header>
+        <p class="sectionTitle" id="backToTop">BEM VINDO A ONEBITSPORTS!</p>
+        <p class="sectionDescription">Aqui é onde você encontra todos os itens mais novos e modernos do seu esporte
+            preferido.</p>
+
+        <section class="gridContainer">
+            <div class="mainContent">
+                <div class="categoryCard">
+                    <img src="./imagens/boxe.jpg" alt="cardImg" class="mainCardImg">
+                    <p class="mainCategoryCardTitle">BOXE</p>
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dicta ipsa odio provident mollitia? Doloremque, corrupti? Cum quam debitis eum pariatur?</p>
                 </div>
-                <div class="item">
-                    <img src="paisagem-650.jpg" alt="">
-                    <h3>Esporte</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus.</p>
+
+                <div class="categoryCard">
+                    <img src="./imagens/crossfit.jpg" alt="cardImg" class="mainCardImg">
+                    <p class="mainCategoryCardTitle">CROSSFIT</p>
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dicta ipsa odio provident mollitia? Doloremque, corrupti? Cum quam debitis eum pariatur?</p>
                 </div>
-                <div class="item">
-                    <img src="paisagem-650.jpg" alt="">
-                    <h3>Esporte</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus.</p>
+                <div class="categoryCard">
+                    <img src="./imagens/natacao.jpg" alt="cardImg" class="mainCardImg">
+                    <p class="mainCategoryCardTitle">NATAÇÃO</p>
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dicta ipsa odio provident mollitia? Doloremque, corrupti? Cum quam debitis eum pariatur?</p>
                 </div>
-                <div class="item">
-                    <img src="paisagem-650.jpg" alt="">
-                    <h3>Esporte</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus.</p>
+                <div class="categoryCard">
+                    <img src="./imagens/roupas.jpg" alt="cardImg" class="mainCardImg">
+                    <p class="mainCategoryCardTitle">ROUPAS</p>
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dicta ipsa odio provident mollitia? Doloremque, corrupti? Cum quam debitis eum pariatur?</p>
                 </div>
-                <div class="item">
-                    <img src="paisagem-650.jpg" alt="">
-                    <h3>Esporte</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus.</p>
+                <div class="categoryCard">
+                    <img src="./imagens/basquete.jpg" alt="cardImg" class="mainCardImg">
+                    <p class="mainCategoryCardTitle">BASQUETE</p>
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dicta ipsa odio provident mollitia? Doloremque, corrupti? Cum quam debitis eum pariatur?</p>
                 </div>
-                <div class="item">
-                    <img src="paisagem-650.jpg" alt="">
-                    <h3>Esporte</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus.</p>
+                <div class="categoryCard">
+                    <img src="./imagens/corrida.jpg" alt="cardImg" class="mainCardImg">
+                    <p class="mainCategoryCardTitle">CORRIDA</p>
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dicta ipsa odio provident mollitia? Doloremque, corrupti? Cum quam debitis eum pariatur?</p>
                 </div>
-                <div class="item">
-                    <img src="paisagem-650.jpg" alt="">
-                    <h3>Esporte</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus.</p>
+                <div class="categoryCard">
+                    <img src="./imagens/surf.jpg" alt="cardImg" class="mainCardImg">
+                    <p class="mainCategoryCardTitle">SURF</p>
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dicta ipsa odio provident mollitia? Doloremque, corrupti? Cum quam debitis eum pariatur?</p>
                 </div>
-                <div class="item">
-                    <img src="paisagem-650.jpg" alt="">
-                    <h3>Esporte</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus.</p>
+                <div class="categoryCard">
+                    <img src="./imagens/trilha.jpg" alt="cardImg" class="mainCardImg">
+                    <p class="mainCategoryCardTitle">TRILHA</p>
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dicta ipsa odio provident mollitia? Doloremque, corrupti? Cum quam debitis eum pariatur?</p>
                 </div>
-        </main>
-        <footer></footer>
+                <div class="categoryCard">
+                    <img src="./imagens/tenis.jpg" alt="cardImg" class="mainCardImg">
+                    <p class="mainCategoryCardTitle">TÊNIS</p>
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dicta ipsa odio provident mollitia? Doloremque, corrupti? Cum quam debitis eum pariatur?</p>
+                </div>
+            </div>
+            <div class="sidebarContent">
+                <p>CATEGORIAS EXTRAS</p>
+                <div class="sidebarCard">
+                    <img src="./imagens/bicicletas.jpg" alt="sidebarCardImg" class="sidebarCardImg">
+                    <p class="sidebarCardTitle">BICICLETAS</p>
+                </div>                
+                <div class="sidebarCard">
+                    <img src="./imagens/esportesNaNeve.jpg" alt="sidebarCardImg" class="sidebarCardImg">
+                    <p class="sidebarCardTitle">ESPORTES DE FRIO</p>
+                </div>
+                <div class="sidebarCard">
+                    <img src="./imagens/skate.jpg" alt="sidebarCardImg" class="sidebarCardImg">
+                    <p class="sidebarCardTitle">SKATE</p>
+                </div>
+                <div class="sidebarCard">
+                    <img src="./imagens/futebolAmericano.jpg" alt="sidebarCardImg" class="sidebarCardImg">
+                    <p class="sidebarCardTitle">FUTEBOL AMERICANO</p>
+                </div>
+                <div class="sidebarCard">
+                    <img src="./imagens/yoga.jpg" alt="sidebarCardImg" class="sidebarCardImg">
+                    <p class="sidebarCardTitle">YOGA</p>
+                </div>
+            </div>
+            
+        
+    </section>
+    <footer class="footer">
+        <img src="logo-onebitcode.svg" alt="logoOnebitcode" class="logoFooter">
+        <a href="#backToTop" class="footerAnchor">VOLTAR PARA O TOPO</a>
+    </footer>
     </div>
 </body>
 
