try create db.json

--- a/JS/Eventos-DOM/DOM/createElement/index.html
+++ b/JS/Eventos-DOM/DOM/createElement/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
 </head>
-<body>
+
+<body style="background-color: rgba(0, 0, 0, 0.479);">
     <main>
-        <div>
+
+        <form action="http://localhost:3000/items" method="post">
             <label for="item">item:</label>
             <input type="text" name="item" id="item">
             <button id="add">ADD</button>
-        </div>
-        <ul class="list">
+        </form>
 
-        </ul>
+        <section id="articles">
+
+        </section>
     </main>
 </body>
+
 </html>
