--- a/node.web/08-middlewares/public/index.html
+++ b/node.web/08-middlewares/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Testando o Multer</h1>
-  <form action="/upload" method="post" enctype="multipart/form-data">
+  <form action="/uploads" method="post" enctype="multipart/form-data">
     <label for="title">Título</label>
     <input type="text" name="title" id="title">
     <br>
